--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,8 @@
                         <szp.rafael.rccar.dto.RemoteControl>src/main/avro/RemoteControl.avsc</szp.rafael.rccar.dto.RemoteControl>
                         <szp.rafael.rccar.dto.Wheel>src/main/avro/Wheel.avsc</szp.rafael.rccar.dto.Wheel>
                         <szp.rafael.rccar.dto.RCCar>src/main/avro/RCCar.avsc</szp.rafael.rccar.dto.RCCar>
+                        <szp.rafael.rccar.dto.TaxTag>src/main/avro/TaxTag.avsc</szp.rafael.rccar.dto.TaxTag>
+                        <szp.rafael.rccar.dto.LastTaxTags>src/main/avro/LastTaxTags.avsc</szp.rafael.rccar.dto.LastTaxTags>
                     </subjects>
                     <references>
                         <szp.rafael.rccar.dto.Body>
@@ -149,6 +151,12 @@
                                 <subject>szp.rafael.rccar.dto.Wheel</subject>
                             </reference>
                         </szp.rafael.rccar.dto.RCCar>
+                        <szp.rafael.rccar.dto.LastTaxTags>
+                            <reference>
+                                <name>szp.rafael.rccar.dto.TaxTag</name>
+                                <subject>szp.rafael.rccar.dto.TaxTag</subject>
+                            </reference>
+                        </szp.rafael.rccar.dto.LastTaxTags>
                     </references>
                 </configuration>
                 <goals>
