--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <confluent.version>7.8.0</confluent.version>
+        <logback-core.version>1.5.13</logback-core.version>
+        <slf4j-api.version>2.1.0-alpha1</slf4j-api.version>
+        <jansi.version>2.4.0</jansi.version>
     </properties>
 
     <dependencies>
@@ -39,6 +42,28 @@
             <version>1.12.0</version>
         </dependency>
 
+<!--        SLF4j-->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback-core.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fusesource.jansi</groupId>
+            <artifactId>jansi</artifactId>
+            <version>${jansi.version}</version>
+        </dependency>
 
     </dependencies>
 
